--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
+Flask-WTF==1.2.1
 gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
@@ -21,3 +22,4 @@ termcolor==2.4.0
 urllib3==2.2.1
 waitress==3.0.0
 Werkzeug==3.0.3
+WTForms==3.1.2
